<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="submit_fifteen_percent">15%</string>
    <string name="submit_ten_percent">10%</string>
    <string name="submit_twenty_percent">20%</string>
    <string name="bill_amount_label">Bill Amount</string>
    <string name="tip_result_label">Tip is:</string>
    <string name="bill_amount_prompt">Enter Bill Amount</string>

</resources>
